@@ -1,0 +1,1 @@
+        lw      $25,%call16(Foo)($28)
